Given/Received List
By clicking Given/Received, you can see who you have vouched for/who
has vouched for you.

--- a/Vouched/res/layout-sw600dp/fragment_pages.xml
+++ b/Vouched/res/layout-sw600dp/fragment_pages.xml
@@ -3,46 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent" >
 
-    <ToggleButton
-        android:id="@+id/toggleButton1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView1"
-        android:layout_alignBottom="@+id/textView1"
-        android:layout_alignParentRight="true"
-        android:layout_marginRight="56dp"
-        android:text="ToggleButton"
-        android:checked="true" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/textView1"
-        android:layout_below="@+id/toggleButton1"
-        android:layout_marginTop="52dp"
-        android:text="Messages"
-        android:textSize="28dp" />
-
-    <ToggleButton
-        android:id="@+id/toggleButton2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/textView2"
-        android:layout_alignBottom="@+id/textView2"
-        android:layout_alignLeft="@+id/toggleButton1"
-        android:text="ToggleButton"
-        android:checked="true" />
-
-    <TextView
-        android:id="@+id/textView1"
+    <CheckBox
+        android:id="@+id/checkBox1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="18dp"
-        android:layout_marginTop="110dp"
-        android:layout_toLeftOf="@+id/toggleButton1"
-        android:text="Notifications"
-        android:textSize="28dp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="67dp"
+        android:checked="false"
+        android:text="Automatically Invite Connections" 
+        android:textSize="36dp"/>
+
+    <CheckBox
+        android:id="@+id/checkBox2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/checkBox1"
+        android:layout_below="@+id/checkBox1"
+        android:layout_marginTop="14dp"
+        android:text="Never ask to send invite."
+        android:textSize = "36dp" />
 
 </RelativeLayout>
