--- a/Vouched/res/menu/main.xml
+++ b/Vouched/res/menu/main.xml
@@ -5,11 +5,19 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
+    
+
     <item
         android:id="@+id/search"
         android:actionViewClass="android.widget.SearchView"
         android:icon="@drawable/ic_search"
         android:showAsAction="collapseActionView|ifRoom"
         android:title="search"/>
+    
+        
+    <item
+        android:id="@+id/share"
+        android:icon="@drawable/ic_action_share"
+        android:title="Share"/>
 
 </menu>
