--- a/Vouched/res/layout/viewpager_layout.xml
+++ b/Vouched/res/layout/viewpager_layout.xml
@@ -4,6 +4,7 @@
   android:layout_width="fill_parent"
   android:layout_height="fill_parent"
   android:orientation="vertical"
+  android:id="@+id/container"
   >
   <android.support.v4.view.ViewPager
     android:id="@+android:id/viewpager"
