--- a/Vouched/res/layout/fragment_find_people.xml
+++ b/Vouched/res/layout/fragment_find_people.xml
@@ -8,18 +8,26 @@
         android:fastScrollEnabled="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/txtLabel"
+        android:layout_alignTop="@+id/search"
         android:layout_marginTop="50dp" >
     </ListView>
 
-    <TextView
-        android:id="@+id/txtLabel"
+    <EditText
+        android:id="@+id/search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:text="Connections"
-        android:textSize="36dp" />
+        android:hint="Enter Connection Name"
+        android:textSize="18dp" />
+
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignBottom="@+id/search"
+        android:layout_toRightOf="@+id/search"
+        android:src="@drawable/ic_search" />
 
 </RelativeLayout>
