--- a/Vouched/res/menu/main.xml
+++ b/Vouched/res/menu/main.xml
@@ -9,15 +9,15 @@
 
     <item
         android:id="@+id/search"
-        android:actionViewClass="android.widget.SearchView"
         android:icon="@drawable/ic_search"
-        android:showAsAction="collapseActionView|ifRoom"
-        android:title="search"/>
+        android:title="Search"
+        android:showAsAction="ifRoom"/>
     
         
     <item
         android:id="@+id/share"
         android:icon="@drawable/ic_action_share"
-        android:title="Share"/>
+        android:title="Share"
+        android:showAsAction="ifRoom"/>
 
 </menu>
