--- a/Vouched/res/layout-sw600dp/fragment_find_people.xml
+++ b/Vouched/res/layout-sw600dp/fragment_find_people.xml
@@ -8,18 +8,18 @@
         android:fastScrollEnabled="true"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/txtLabel"
+        android:layout_alignTop="@+id/search"
         android:layout_marginTop="50dp" >
     </ListView>
 
-    <TextView
-        android:id="@+id/txtLabel"
+    <EditText
+        android:id="@+id/search"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
-        android:text="Connection"
+        android:hint="Enter connection name"
         android:textSize="36dp" />
 
 </RelativeLayout>
