--- a/Vouched/res/layout-sw600dp/view_profile.xml
+++ b/Vouched/res/layout-sw600dp/view_profile.xml
@@ -39,7 +39,7 @@
         android:layout_height="wrap_content"
         android:layout_alignLeft="@+id/viewPic"
         android:layout_below="@+id/viewPic"
-        android:layout_marginTop="75dp"
+        android:layout_marginTop="50dp"
         android:layout_marginLeft="30dp"
         android:orientation="horizontal" >
 
@@ -477,5 +477,14 @@
         android:layout_toRightOf="@+id/blank_team"
         android:text="100"
         android:textSize="22dp" />
+
+    <Button
+        android:id="@+id/vouch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/bar_team"
+        android:layout_below="@+id/score_team"
+        android:layout_marginTop="20dp"
+        android:text="Vouch" />
 
 </RelativeLayout>
