--- a/Vouched/res/layout/fragment_photos.xml
+++ b/Vouched/res/layout/fragment_photos.xml
@@ -10,6 +10,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/cName"
         android:layout_centerHorizontal="true"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:text="Connection Information" />
 
     <TextView
@@ -18,6 +20,8 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
+        android:ellipsize="end"
+        android:singleLine="true"
         android:text="Connection Name"
         android:textSize="24dp"
         android:textStyle="bold" />
@@ -28,6 +32,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/cInfo"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
         android:src="@drawable/default_face" />
 
     <LinearLayout
@@ -163,10 +168,7 @@
         android:layout_centerHorizontal="true"
         android:text="SELECT UP TO (4)"
         android:textSize="12dp" />
-        
 "
-
-    
 
     <Button
         android:id="@+id/skip"
@@ -175,7 +177,7 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/linearLayout1"
         android:layout_marginTop="29dp"
-        android:background="#E91A1A" />
+        android:background="@drawable/skip_button" />
 
     <Button
         android:id="@+id/next"
@@ -183,7 +185,7 @@
         android:layout_height="50dp"
         android:layout_alignBaseline="@+id/skip"
         android:layout_alignBottom="@+id/skip"
-        android:layout_alignParentRight="true" 
-        android:background="#669900"/>
+        android:layout_alignParentRight="true"
+        android:background="@drawable/vouch_button" />
 
 </RelativeLayout>
