--- a/Vouched/res/layout/fragment_dashboard.xml
+++ b/Vouched/res/layout/fragment_dashboard.xml
@@ -174,7 +174,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@+id/linearLayout1"
-            android:layout_marginLeft="25dp"
+            android:layout_marginLeft="15dp"
             android:layout_marginTop="10dp"
             android:text="VOUCHED REPUTATION"
             android:textColor="#669900"
@@ -202,7 +202,8 @@
             android:layout_marginLeft="25dp"
             android:layout_marginTop="10dp"
             android:layout_toRightOf="@+id/header2"
-            android:text="SCORE"
+            android:text="NUMBER"
+            android:singleLine="true"
             android:textColor="#669900"
             android:textSize="12dp"
             android:textStyle="bold" />
