--- a/Vouched/res/layout-sw600dp/login.xml
+++ b/Vouched/res/layout-sw600dp/login.xml
@@ -15,6 +15,17 @@
         android:textSize="24dp"
         android:layout_marginTop="100dp"/>
 
+    <Button
+        android:id="@+id/signin"
+        android:layout_width="match_parent"
+        android:layout_height="75dp"
+        android:text="Sign In with LinkedIn"
+        android:textSize="36dp"
+        android:textColor="@android:color/white"
+        android:background="@android:color/black"
+        android:layout_gravity="center"
+        android:layout_marginTop="400dp" />
+
 >
 
 </LinearLayout>
