--- a/Vouched/res/layout-sw600dp/view_profile.xml
+++ b/Vouched/res/layout-sw600dp/view_profile.xml
@@ -153,7 +153,7 @@
         android:layout_marginLeft="40dp"
         android:layout_marginTop="25dp"
         android:layout_toRightOf="@+id/header2"
-        android:text="SCORE"
+        android:text="NUMBER"
         android:textColor="#669900"
         android:textSize="18dp"
         android:textStyle="bold" />
