--- a/Vouched/res/layout/login.xml
+++ b/Vouched/res/layout/login.xml
@@ -6,6 +6,12 @@
     android:background ="@drawable/splash"
     android:id="@+id/spash_background">
 
-
+    <Button
+        android:id="@+id/signin"
+        android:layout_width="match_parent"
+        android:layout_height="40dp"
+        android:layout_gravity="center"
+        android:layout_marginTop="300dp"
+        android:background="@drawable/signin_button" />
 
 </LinearLayout>
