--- a/Vouched/res/layout/view_profile.xml
+++ b/Vouched/res/layout/view_profile.xml
@@ -153,7 +153,7 @@
         android:layout_marginLeft="25dp"
         android:layout_marginTop="10dp"
         android:layout_toRightOf="@+id/header2"
-        android:text="SCORE"
+        android:text="NUMBER"
         android:textColor="#669900"
         android:textSize="12dp"
         android:textStyle="bold" />
