--- a/Vouched/res/menu/main.xml
+++ b/Vouched/res/menu/main.xml
@@ -5,19 +5,20 @@
         android:orderInCategory="100"
         android:showAsAction="never"
         android:title="@string/action_settings"/>
-    
-
+    <item
+        android:id="@+id/logout"
+        android:orderInCategory="100"
+        android:showAsAction="never"
+        android:title="Logout"/>
     <item
         android:id="@+id/search"
         android:icon="@drawable/ic_search"
-        android:title="Search"
-        android:showAsAction="ifRoom"/>
-    
-        
+        android:showAsAction="ifRoom"
+        android:title="Search"/>
     <item
         android:id="@+id/share"
         android:icon="@drawable/ic_action_share"
-        android:title="Share"
-        android:showAsAction="ifRoom"/>
+        android:showAsAction="ifRoom"
+        android:title="Share"/>
 
 </menu>
